Fixed TP scrolling

--- a/mapsrc.html
+++ b/mapsrc.html
@@ -25,40 +25,40 @@
 	<div id="lgnRecord"><span id="lgnRecordCurrent"></span>&nbsp;<span id="lgnRecordHover"></span></div>
 	<div id="lgnTrack">
 		<span>
-		<ins class="lgn_mystic" title="<span class='lgnTip'>2x <img src='img/login/mystic_i.png' /></span>"></ins>
-		<ins class="lgn_laurel" title="<span class='lgnTip'>1x <img src='img/login/laurel_i.png' /></span>"></ins>
-		<ins class="lgn_luck" title="<span class='lgnTip'>1x <img src='img/login/luck_i.png' /></span>"></ins>
-		<ins class="lgn_bl" title="<span class='lgnTip'>1? <img src='img/login/bl_stone.png' /><br />1? <img src='img/login/bl_key.png' /><br />1? <img src='img/login/bl_transmutation.png' /><br />1? <img src='img/login/bl_fun.png' /><br />1? <img src='img/login/bl_merchant.png' /><br />1? <img src='img/login/bl_bank.png' /><br />1? <img src='img/login/bl_kit.png' /><br />1? <img src='img/login/bl_tp.png' /><br />1? <img src='img/login/bl_repair.png' /><br />1? <img src='img/login/bl_revive.png' /><br /></span>"></ins>
-		<ins class="lgn_material" title="<span class='lgnTip'>1-5 <img src='img/login/material_t1.png' /><br />1-5 <img src='img/login/material_t2.png' /><br />1-5 <img src='img/login/material_t3.png' /><br />1-5 <img src='img/login/material_t4.png' /><br />1-5 <img src='img/login/material_t5.png' /><br />1-5 <img src='img/login/material_t6.png' /></span>"></ins>
-		<ins class="lgn_experience" title="<span class='lgnTip'>1x <img src='img/login/experience_i.png' /></span>"></ins>
-		<ins class="lgn_laurel lgnWeekend" title="<span class='lgnTip'>10x <img src='img/login/laurel_i.png' /></span>"></ins>
+		<ins class="lgn_mystic" title="<span class='lgnTip'>2x <img src='img/daily/mystic_i.png' /></span>"></ins>
+		<ins class="lgn_laurel" title="<span class='lgnTip'>1x <img src='img/daily/laurel_i.png' /></span>"></ins>
+		<ins class="lgn_luck" title="<span class='lgnTip'>1x <img src='img/daily/luck_i.png' /></span>"></ins>
+		<ins class="lgn_bl" title="<span class='lgnTip'>1? <img src='img/daily/bl_stone.png' /><br />1? <img src='img/daily/bl_key.png' /><br />1? <img src='img/daily/bl_transmutation.png' /><br />1? <img src='img/daily/bl_fun.png' /><br />1? <img src='img/daily/bl_merchant.png' /><br />1? <img src='img/daily/bl_bank.png' /><br />1? <img src='img/daily/bl_kit.png' /><br />1? <img src='img/daily/bl_tp.png' /><br />1? <img src='img/daily/bl_repair.png' /><br />1? <img src='img/daily/bl_revive.png' /><br /></span>"></ins>
+		<ins class="lgn_material" title="<span class='lgnTip'>1-5 <img src='img/daily/material_t1.png' /><br />1-5 <img src='img/daily/material_t2.png' /><br />1-5 <img src='img/daily/material_t3.png' /><br />1-5 <img src='img/daily/material_t4.png' /><br />1-5 <img src='img/daily/material_t5.png' /><br />1-5 <img src='img/daily/material_t6.png' /></span>"></ins>
+		<ins class="lgn_experience" title="<span class='lgnTip'>1x <img src='img/daily/experience_i.png' /></span>"></ins>
+		<ins class="lgn_laurel lgnWeekend" title="<span class='lgnTip'>10x <img src='img/daily/laurel_i.png' /></span>"></ins>
 		</span>
 		<span>
-		<ins class="lgn_mystic" title="<span class='lgnTip'>4x <img src='img/login/mystic_i.png' /></span>"></ins>
-		<ins class="lgn_laurel" title="<span class='lgnTip'>2x <img src='img/login/laurel_i.png' /></span>"></ins>
-		<ins class="lgn_luck" title="<span class='lgnTip'>2x <img src='img/login/luck_i.png' /></span>"></ins>
-		<ins class="lgn_bl" title="<span class='lgnTip'>1? <img src='img/login/bl_stone.png' /><br />1? <img src='img/login/bl_key.png' /><br />1? <img src='img/login/bl_transmutation.png' /><br />1? <img src='img/login/bl_fun.png' /><br />1? <img src='img/login/bl_merchant.png' /><br />1? <img src='img/login/bl_bank.png' /><br />1? <img src='img/login/bl_kit.png' /><br />1? <img src='img/login/bl_tp.png' /><br />1? <img src='img/login/bl_repair.png' /><br />1? <img src='img/login/bl_revive.png' /><br /></span>"></ins>
-		<ins class="lgn_material" title="<span class='lgnTip'>1-6 <img src='img/login/material_t1.png' /><br />1-6 <img src='img/login/material_t2.png' /><br />1-6 <img src='img/login/material_t3.png' /><br />1-6 <img src='img/login/material_t4.png' /><br />1-6 <img src='img/login/material_t5.png' /><br />1-6 <img src='img/login/material_t6.png' /></span>"></ins>
-		<ins class="lgn_experience" title="<span class='lgnTip'>2x <img src='img/login/experience_i.png' /></span>"></ins>
-		<ins class="lgn_exotic lgnWeekend" title="<span class='lgnTip'>1x <img src='img/login/exotic_war.png' /></span>"></ins>
+		<ins class="lgn_mystic" title="<span class='lgnTip'>4x <img src='img/daily/mystic_i.png' /></span>"></ins>
+		<ins class="lgn_laurel" title="<span class='lgnTip'>2x <img src='img/daily/laurel_i.png' /></span>"></ins>
+		<ins class="lgn_luck" title="<span class='lgnTip'>2x <img src='img/daily/luck_i.png' /></span>"></ins>
+		<ins class="lgn_bl" title="<span class='lgnTip'>1? <img src='img/daily/bl_stone.png' /><br />1? <img src='img/daily/bl_key.png' /><br />1? <img src='img/daily/bl_transmutation.png' /><br />1? <img src='img/daily/bl_fun.png' /><br />1? <img src='img/daily/bl_merchant.png' /><br />1? <img src='img/daily/bl_bank.png' /><br />1? <img src='img/daily/bl_kit.png' /><br />1? <img src='img/daily/bl_tp.png' /><br />1? <img src='img/daily/bl_repair.png' /><br />1? <img src='img/daily/bl_revive.png' /><br /></span>"></ins>
+		<ins class="lgn_material" title="<span class='lgnTip'>1-6 <img src='img/daily/material_t1.png' /><br />1-6 <img src='img/daily/material_t2.png' /><br />1-6 <img src='img/daily/material_t3.png' /><br />1-6 <img src='img/daily/material_t4.png' /><br />1-6 <img src='img/daily/material_t5.png' /><br />1-6 <img src='img/daily/material_t6.png' /></span>"></ins>
+		<ins class="lgn_experience" title="<span class='lgnTip'>2x <img src='img/daily/experience_i.png' /></span>"></ins>
+		<ins class="lgn_exotic lgnWeekend" title="<span class='lgnTip'>1x <img src='img/daily/exotic_war.png' /></span>"></ins>
 		</span>
 		<span>
-		<ins class="lgn_mystic" title="<span class='lgnTip'>6x <img src='img/login/mystic_i.png' /></span>"></ins>
-		<ins class="lgn_laurel" title="<span class='lgnTip'>3x <img src='img/login/laurel_i.png' /></span>"></ins>
-		<ins class="lgn_luck" title="<span class='lgnTip'>3x <img src='img/login/luck_i.png' /></span>"></ins>
-		<ins class="lgn_bl" title="<span class='lgnTip'>1? <img src='img/login/bl_stone.png' /><br />1? <img src='img/login/bl_key.png' /><br />1? <img src='img/login/bl_transmutation.png' /><br />1? <img src='img/login/bl_fun.png' /><br />1? <img src='img/login/bl_merchant.png' /><br />1? <img src='img/login/bl_bank.png' /><br />1? <img src='img/login/bl_kit.png' /><br />1? <img src='img/login/bl_tp.png' /><br />1? <img src='img/login/bl_repair.png' /><br />1? <img src='img/login/bl_revive.png' /><br /></span>"></ins>
-		<ins class="lgn_celebration" title="<span class='lgnTip'>1x <img src='img/login/celebration_i.png' /></span>"></ins>
-		<ins class="lgn_experience" title="<span class='lgnTip'>3x <img src='img/login/experience_i.png' /></span>"></ins>
-		<ins class="lgn_laurel lgnWeekend" title="<span class='lgnTip'>15x <img src='img/login/laurel_i.png' /></span>"></ins>
+		<ins class="lgn_mystic" title="<span class='lgnTip'>6x <img src='img/daily/mystic_i.png' /></span>"></ins>
+		<ins class="lgn_laurel" title="<span class='lgnTip'>3x <img src='img/daily/laurel_i.png' /></span>"></ins>
+		<ins class="lgn_luck" title="<span class='lgnTip'>3x <img src='img/daily/luck_i.png' /></span>"></ins>
+		<ins class="lgn_bl" title="<span class='lgnTip'>1? <img src='img/daily/bl_stone.png' /><br />1? <img src='img/daily/bl_key.png' /><br />1? <img src='img/daily/bl_transmutation.png' /><br />1? <img src='img/daily/bl_fun.png' /><br />1? <img src='img/daily/bl_merchant.png' /><br />1? <img src='img/daily/bl_bank.png' /><br />1? <img src='img/daily/bl_kit.png' /><br />1? <img src='img/daily/bl_tp.png' /><br />1? <img src='img/daily/bl_repair.png' /><br />1? <img src='img/daily/bl_revive.png' /><br /></span>"></ins>
+		<ins class="lgn_celebration" title="<span class='lgnTip'>1x <img src='img/daily/celebration_i.png' /></span>"></ins>
+		<ins class="lgn_experience" title="<span class='lgnTip'>3x <img src='img/daily/experience_i.png' /></span>"></ins>
+		<ins class="lgn_laurel lgnWeekend" title="<span class='lgnTip'>15x <img src='img/daily/laurel_i.png' /></span>"></ins>
 		</span>
 		<span>
-		<ins class="lgn_mystic" title="<span class='lgnTip'>8x <img src='img/login/mystic_i.png' /></span>"></ins>
-		<ins class="lgn_laurel" title="<span class='lgnTip'>4x <img src='img/login/laurel_i.png' /></span>"></ins>
-		<ins class="lgn_luck" title="<span class='lgnTip'>4x <img src='img/login/luck_i.png' /></span>"></ins>
-		<ins class="lgn_bl" title="<span class='lgnTip'>1? <img src='img/login/bl_stone.png' /><br />1? <img src='img/login/bl_key.png' /><br />1? <img src='img/login/bl_transmutation.png' /><br />1? <img src='img/login/bl_fun.png' /><br />1? <img src='img/login/bl_merchant.png' /><br />1? <img src='img/login/bl_bank.png' /><br />1? <img src='img/login/bl_kit.png' /><br />1? <img src='img/login/bl_tp.png' /><br />1? <img src='img/login/bl_repair.png' /><br />1? <img src='img/login/bl_revive.png' /><br /></span>"></ins>
-		<ins class="lgn_transmutation" title="<span class='lgnTip'>3x <img src='img/login/bl_transmutation.png' /></span>"></ins>
-		<ins class="lgn_experience" title="<span class='lgnTip'>4x <img src='img/login/experience_i.png' /></span>"></ins>
-		<ins class="lgn_loyalty lgnWeekend" title="<span class='lgnTip'>2% <img src='img/login/loyalty_coin.png' /><br /><hr /><br />1x <img src='img/login/loyalty_vision.png' /><br />1-2? <img src='img/login/loyalty_damask.png' /><br />1-2? <img src='img/login/loyalty_deldrimor.png' /><br />1-2? <img src='img/login/loyalty_elonian.png' /><br />1-2? <img src='img/login/loyalty_spiritwood.png' /><br /><br />8x <img src='img/login/loyalty_shard.png' /><br />7x <img src='img/login/loyalty_clover.png' /><br /><br />20x <img src='img/login/laurel_i.png' /><br /><br />6x <img src='img/login/experience_i.png' /><br /></span>"></ins>
+		<ins class="lgn_mystic" title="<span class='lgnTip'>8x <img src='img/daily/mystic_i.png' /></span>"></ins>
+		<ins class="lgn_laurel" title="<span class='lgnTip'>4x <img src='img/daily/laurel_i.png' /></span>"></ins>
+		<ins class="lgn_luck" title="<span class='lgnTip'>4x <img src='img/daily/luck_i.png' /></span>"></ins>
+		<ins class="lgn_bl" title="<span class='lgnTip'>1? <img src='img/daily/bl_stone.png' /><br />1? <img src='img/daily/bl_key.png' /><br />1? <img src='img/daily/bl_transmutation.png' /><br />1? <img src='img/daily/bl_fun.png' /><br />1? <img src='img/daily/bl_merchant.png' /><br />1? <img src='img/daily/bl_bank.png' /><br />1? <img src='img/daily/bl_kit.png' /><br />1? <img src='img/daily/bl_tp.png' /><br />1? <img src='img/daily/bl_repair.png' /><br />1? <img src='img/daily/bl_revive.png' /><br /></span>"></ins>
+		<ins class="lgn_transmutation" title="<span class='lgnTip'>3x <img src='img/daily/bl_transmutation.png' /></span>"></ins>
+		<ins class="lgn_experience" title="<span class='lgnTip'>4x <img src='img/daily/experience_i.png' /></span>"></ins>
+		<ins class="lgn_loyalty lgnWeekend" title="<span class='lgnTip'>2% <img src='img/daily/loyalty_coin.png' /><br /><hr /><br />1x <img src='img/daily/loyalty_vision.png' /><br />1-2? <img src='img/daily/loyalty_damask.png' /><br />1-2? <img src='img/daily/loyalty_deldrimor.png' /><br />1-2? <img src='img/daily/loyalty_elonian.png' /><br />1-2? <img src='img/daily/loyalty_spiritwood.png' /><br /><br />8x <img src='img/daily/loyalty_shard.png' /><br />7x <img src='img/daily/loyalty_clover.png' /><br /><br />20x <img src='img/daily/laurel_i.png' /><br /><br />6x <img src='img/daily/experience_i.png' /><br /></span>"></ins>
 		</span>
 	</div>
 <br />
@@ -76,7 +76,7 @@
 <h2><img data-src="img/map/vista.png" alt="Vista" /> Vista</h2>
 <p>Hover over the <img class="cntIconExample" data-src="img/map/display.png" alt="Display"> icon on the map pane and checkmark the option to display World Completion icons. The fastest vista to view should be the ones next to asura gates in <a href="http://wiki.guildwars2.com/wiki/City">cities</a>.</p>
 
-<h2><img data-src="img/ui/resource.png" alt="Gatherer" /> Gathering</h2>
+<h2><img data-src="img/node/resource_metal.png" alt="Gatherer" /> Gathering</h2>
 <p>Open the Resource Nodes section of this page to show rich metal nodes or plant farms. Nodes in your home instance (regardless of your character's race) counts as region gatherer: Divinity's Reach is Kryta, Black Citadel is Ascalon, Hoelbrak is Shiverpeaks, Rata Sum and The Grove are Maguuma Jungle.</p>
 </div>
 
@@ -205,20 +205,42 @@ These open world chests are separate from Jumping Puzzles and Mini-Dungeons. Hol
 	>Collectible Items</var>
 </header>
 <section>
-<button id="mapToggle_Collectible" class="btnToggle"><img data-src="img/map/display.png" alt="Toggle" /></button>
+<button id="mapToggle_Collectible" class="btnToggle"><img data-src="img/map/display_hide.png" alt="Toggle" /></button>
 <div class="cssRight"><strong>Links:</strong> [Y]outube [W]iki [C]redit</div>
 <div id="mapCollectibleList"></div>
 <kbd class="jsHelpCollapsible"></kbd>
 <div>
-	<p>Many achievements require you to go around the world to collect or interact with scattered or hidden landmarks or items. These are some of them, including the current Living Story ones if available. When in game, hold the Ctrl key to see the item's name appear.</p>
+	<p>Many achievements require you to go around the world to collect or interact with scattered or hidden landmarks or items. These are some of them, including the current Living Story ones if available. When in game, hold the Ctrl key to see the item's name appear. Use the <a href="http://gw2timer.com/navi">overlay GPS program</a> for easier search.</p>
 	<p>Every type of collectible is its own checklist. The map markers can be clicked three times to alternate between three ring colors representing an <em>Unfound</em>, <em>Tracked</em>, and <em>Found</em> state, and your address bar will be updated with a shareable URL for those marked. Click Reset for all the rings of that collectible type to be Unfounded again.</p>
+
 	<p><b>Coordinates credit goes to:</b><br />
-	<a href="http://dulfy.net/category/gw2/">Dulfy</a>: Dive Master, Coins<br />
+	<a href="http://dulfy.net/category/gw2/">Dulfy</a>: Dive Master, Cleaning Up the Neighborhood, Marriner Plaque, Coins<br />
 	<a href="http://www.mattsta.ninja/">Mattsta</a>: Buried Chests, Coins<br />
-	<a href="http://www.palingenesis.webspace.virginmedia.com/Tim/GW2/Manual/Manual.html">Palingenesis</a>: Badges
+	<a href="http://www.palingenesis.webspace.virginmedia.com/Tim/GW2/Manual/Manual.html">Palingenesis</a>: Badges, Bandit Chests, Speedy Reader, Matrix Cube Key
 	</p>
 </div>
 </section>
+
+
+
+
+<!--<header id="headerMap_Guild" class="jsSection mapOnly"><img src="img/ui/guild.png" alt="Guild" /><var
+	data-de="Gilden-Missionen"
+	data-es="Misiónes de Clan"
+	data-fr="Missions de Guilde"
+	data-cs="Cech Mise"
+	data-it="Missioni di Gilda"
+	data-pl="Misje Gildii"
+	data-pt="Missões de Alianças"
+	data-ru="Гильдии Миссии"
+	data-zh="公會任務"
+	>Guild Missions</var>
+</header>
+<section>
+<div id="mapGuildTimer"></div>
+<button id="mapToggle_Guild" class="btnToggle"><img data-src="img/map/display.png" alt="Toggle" /></button>
+<div id="mapGuildList"></div>
+</section>-->
 
 
 
@@ -274,6 +296,7 @@ These open world chests are separate from Jumping Puzzles and Mini-Dungeons. Hol
 	<button id="trdToggle" class="trdButton" title="Toggle all calculators view."><img data-src="img/ui/toggle.png" alt="Toggle" /></button>
 	<button id="trdRefresh" class="trdButton" title="Manually refresh current prices."><img data-src="img/ui/refresh.png" alt="Refresh" /></button>
 	<button id="trdMute" class="trdButton" title="Stop current notification speech."><img data-src="img/ui/mute.png" alt="Mute" /></button>
+	<button id="trdPrint" class="trdButton" title="Print saved calculator data to console. You can copy the output to Microsoft Excel as a .csv file.">.CSV</button>
 	<br /><br />
 	
 	<div id="trdList"></div>
