--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 			</div>
 			<div id="itemMapLinksNorth" class="itemMapLinks">
 				<a class="jsTranslate linkExternal" title="<dfn>Go to Forum</dfn>" href="http://forum.renaka.com/forum/368355/">news</a><span> /</span>
-				<u><a class="jsTranslate" title="<dfn>Switch to Simple Mode (clock only)</dfn><br />gw2timer.com/s" href="./?mode=Simple">simple</a></u><span> /</span>
-				<u><a class="jsTranslate" title="<dfn>Switch to Mobile Mode (right panel only)</dfn><br />gw2timer.com/m" href="./?mode=Mobile">mobile</a></u><span> /</span>
+				<u><a class="jsTranslate" title="<dfn>Switch to Simple Mode (clock only)</dfn><br />gw2timer.com/s<br /><div class='mapLoc'><img src='http://i.imgur.com/ERlYRR3.png' /></div>" href="./?mode=Simple">simple</a></u><span> /</span>
+				<u><a class="jsTranslate" title="<dfn>Switch to Mobile Mode (right panel only)</dfn><br />gw2timer.com/m<br /><div class='mapLoc'><img src='http://i.imgur.com/0QsaeY7.png' /></div>" href="./?mode=Mobile">mobile</a></u><span> /</span>
 				<u><a class="jsTranslate" title="<dfn>Dry Top Buried Locked Chests</dfn>" href="./?page=Chests">chests</a></u>
 				<div id="mapGPS" class="mapHUDContainer">
 					<img id="mapGPSButton" class="mapHUDButton" data-title="click to center character" src="img/map/gps.png" alt="GPS" />
@@ -94,7 +94,7 @@
 						</div>
 						<label title="Show/Hide possible event locations. Will increase initial site load time if enabled. Most in-game events have a cooldown of 15 minutes from completion to active again, and can become active by simply being near them."><img data-src="img/event/swords.png" /><input id="opt_bol_displayEvents" type="checkbox" /> Dynamic Events</label>
 						<div id="mapOptionsOther">
-							<label title="Automatically scroll the map to the next predicted event. You'll need to be on the chains page."><input id="opt_bol_tourPrediction" type="checkbox" /> Tour predicted events</label>
+							<label title="Automatically scroll the map to the next predicted World Boss event. You'll need to be on the chains page."><input id="opt_bol_tourPrediction" type="checkbox" /> Tour predicted events</label>
 							<label title="Show/Hide the colored lines of the event paths."><input id="opt_bol_showChainPaths" type="checkbox" /> Show chain paths</label>
 						</div>
 					</div>
@@ -106,61 +106,61 @@
 							<div>
 							<h2 data-region="kryta"></h2>
 							<ul>
-							<li data-zone="queensdale"></li>
-							<li data-zone="divinity"></li>
-							<li data-zone="kessex"></li>
-							<li data-zone="gendarran"></li>
-							<li data-zone="harathi"></li>
-							<li data-zone="lion"></li>
-							<li data-zone="bloodtide"></li>
-							<li data-zone="southsun"></li>
+								<li data-zone="divinity"></li>
+								<li data-zone="lion"></li>
+								<li data-zone="queensdale"></li>
+								<li data-zone="kessex"></li>
+								<li data-zone="gendarran"></li>
+								<li data-zone="harathi"></li>
+								<li data-zone="bloodtide"></li>
+								<li data-zone="southsun"></li>
 							</ul>
 							<br />
 							<h2 data-region="wastes"></h2>
 							<ul>
-							<li data-zone="silverwastes"></li>
-							<li data-zone="dry"></li>
+								<li data-zone="dry"></li>
+								<li data-zone="silverwastes"></li>
 							</ul>
 							<br />
 							<h2 data-region="maguuma"></h2>
 							<ul>
-							<li data-zone="metrica"></li>
-							<li data-zone="rata"></li>
-							<li data-zone="caledon"></li>
-							<li data-zone="grove"></li>
-							<li data-zone="brisban"></li>
-							<li data-zone="sparkfly"></li>
-							<li data-zone="maelstrom"></li>
+								<li data-zone="rata"></li>
+								<li data-zone="grove"></li>
+								<li data-zone="metrica"></li>
+								<li data-zone="caledon"></li>
+								<li data-zone="brisban"></li>
+								<li data-zone="sparkfly"></li>
+								<li data-zone="maelstrom"></li>
 							</ul>
 							</div>
 							<div>
 							<h2 data-region="shiverpeaks"></h2>
 							<ul>
-							<li data-zone="wayfarer"></li>
-							<li data-zone="hoelbrak"></li>
-							<li data-zone="snowden"></li>
-							<li data-zone="lornar"></li>
-							<li data-zone="dredgehaunt"></li>
-							<li data-zone="timberline"></li>
-							<li data-zone="frostgorge"></li>
+								<li data-zone="hoelbrak"></li>
+								<li data-zone="wayfarer"></li>
+								<li data-zone="snowden"></li>
+								<li data-zone="lornar"></li>
+								<li data-zone="dredgehaunt"></li>
+								<li data-zone="timberline"></li>
+								<li data-zone="frostgorge"></li>
 							</ul>
 							<br />
 							<h2 data-region="ascalon"></h2>
 							<ul>
-							<li data-zone="ashford"></li>
-							<li data-zone="citadel"></li>
-							<li data-zone="diessa"></li>
-							<li data-zone="fields"></li>
-							<li data-zone="marches"></li>
-							<li data-zone="blazeridge"></li>
-							<li data-zone="fireheart"></li>
+								<li data-zone="citadel"></li>
+								<li data-zone="ashford"></li>
+								<li data-zone="diessa"></li>
+								<li data-zone="fields"></li>
+								<li data-zone="marches"></li>
+								<li data-zone="blazeridge"></li>
+								<li data-zone="fireheart"></li>
 							</ul>
 							<br />
 							<h2 data-region="orr"></h2>
 							<ul>
-							<li data-zone="straits"></li>
-							<li data-zone="malchor"></li>
-							<li data-zone="cursed"></li>
+								<li data-zone="straits"></li>
+								<li data-zone="malchor"></li>
+								<li data-zone="cursed"></li>
 							</ul>
 							</div>
 						</div>
@@ -174,15 +174,7 @@
 			</div>
 			</article>
 		</section>
-		<section id="paneWvW">&nbsp;
-			<article id="paneHUDWvW">
-			<div id="itemWvWCoordinates">
-				<input id="wvwCoordinatesMouse" type="text" />
-				<input id="wvwCoordinatesCopy" type="text" />
-				<input id="wvwCoordinatesName" type="text" />
-			</div>
-			</article>
-		</section>
+		<section id="paneWvW">&nbsp;</section>
 	</div><!-- End of panelLeft -->
 	<div id="panelRight" class="panelMain">
 		<div id="paneBoard">
