--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
 	<meta name="description" content="Guild Wars 2 dragon timer for world boss meta events, with daily achievements checklists, JP nodes map, and Trading Post tracker overlay." />
 	<meta name="google-site-verification" content="hPcBd74DxlBzpTu6wO6DkIcOVFLu9SOMT-GQ1MI3fbg" />
 	<meta name="msvalidate.01" content="95E5C0E89A8A24688EC00F2A69986A17" />
-	<link rel="alternate" hreflang="de" href="http://gw2timer.com/?enu_Language=de" />
-	<link rel="alternate" hreflang="es" href="http://gw2timer.com/?enu_Language=es" />
-	<link rel="alternate" hreflang="fr" href="http://gw2timer.com/?enu_Language=fr" />
 
 	<!-- Stylesheets -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -169,7 +166,7 @@
 				</div>
 			</div>
 			<div id="itemMapLinksSouth" class="itemMapLinks">
-				<a class="linkExternal" title="<dfn>Download the app to run GW2Timer inside Guild Wars 2!</dfn>" href="http://forum.renaka.com/topic/5546166/">
+				<a class="linkExternal" title="<dfn>Download the app to run GW2Timer inside Guild Wars 2!</dfn><br /><div class='mapLoc'><img src='http://i.imgur.com/mZ1Tboj.png' /></div>" href="http://forum.renaka.com/topic/5546166/">
 					<img id="itemLogo" src="img/ui/favicon.png" alt="Overlay Application" />gw2timer.com <u>overlay</u>
 				</a>
 			</div>
