Streamline Chains page

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 				</div>
 			</div>
 			<div id="itemMapLinksSouth" class="itemMapLinks">
-				<a class="linkExternal" title="<dfn>Download the app to run GW2Timer inside Guild Wars 2!</dfn><br /><div class='mapLoc'><img src='http://i.imgur.com/mZ1Tboj.png' /></div>" href="http://forum.renaka.com/topic/5546166/">
+				<a class="linkExternal" title="<dfn>Download the app to run GW2Timer inside GW2!</dfn><br /><div class='mapLoc'><img src='http://i.imgur.com/mZ1Tboj.png' /></div>" href="http://forum.renaka.com/topic/5546166/">
 					<img id="itemLogo" src="img/ui/favicon.png" alt="Overlay Application" />gw2timer.com <u>overlay</u>
 				</a>
 			</div>
@@ -384,7 +384,7 @@
 					<kbd></kbd>
 				</header>
 				<div id="listChainsTimetable" class="listChains"></div>
-				<div id="listDummyBottom"></div>
+				<br />
 			</article>
 			<article id="plateMap"></article><!-- Empty plates will be populated by AJAX -->
 			<article id="plateWvW"></article>
