Fixed zone name

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 								<li data-zone="citadel"></li>
 								<li data-zone="ashford"></li>
 								<li data-zone="diessa"></li>
-								<li data-zone="ruin"></li>
+								<li data-zone="fields"></li>
 								<li data-zone="marches"></li>
 								<li data-zone="blazeridge"></li>
 								<li data-zone="fireheart"></li>
