--- a/mapsrc.html
+++ b/mapsrc.html
@@ -241,6 +241,12 @@ These open world chests are separate from Jumping Puzzles and Mini-Dungeons. Hol
 <div id="mapGuildTimer"></div>
 <button id="mapToggle_Guild" class="btnToggle"><img data-src="img/map/display.png" alt="Toggle" /></button>
 <div id="mapGuildList"></div>
+<kbd class="jsHelpCollapsible"></kbd>
+<div>
+	<p><b>Coordinates credit goes to:</b><br />
+	<a href="http://www.palingenesis.webspace.virginmedia.com/Tim/GW2/Manual/Manual.html">Palingenesis</a>: Bounty, Trek
+	</p>
+</div>
 </section>-->
 
 
