Guild missions complete

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 		==================================================================== -->
 		<nav id="paneMenu" class="paneRight">
 			<kbd id="menuChains" title="<dfn>Chains:</dfn> Timers, Events, Schedule"><ins></ins></kbd>
-			<kbd id="menuMap" title="<dfn>Map:</dfn> Dailies, Gathering, JPs, TP, Checklists"><ins></ins></kbd>
+			<kbd id="menuMap" title="<dfn>Map:</dfn> Dailies, Nodes, JPs, Missions, TP, Checklists"><ins></ins></kbd>
 			<!--<kbd id="menuWvW" title="<dfn>WvW:</dfn> Map, Tracer, Siege"><ins></ins></kbd>-->
 			<kbd id="menuHelp" title="<dfn>Help:</dfn> FAQ, About, Walkthrough"><ins></ins></kbd>
 			<kbd id="menuOptions" title="<dfn>Options:</dfn> Display, Format, Alarm"><ins></ins></kbd>
