--- a/404.html
+++ b/404.html
@@ -92,7 +92,7 @@
 					case 3:
 					{
 						// Third argument can be a comma separated coordinates, a map zone, or an article index
-						if (section.indexOf(",") !== -1)
+						if (article.indexOf(",") !== -1)
 						{
 							newloc = base + "?page=" + page + "&section=" + section + "&go=" + article;
 						}
