--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script>window.L || document.write('<script src="bin/leaflet.js"><\/script>');</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/zones.js"></script>
+	<script type="text/javascript" src="data/general.js"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 <!-- Google Analytics -->
@@ -59,7 +59,7 @@
 		==================================================================== -->
 		<section id="paneMap">&nbsp;
 			<article id="paneHUDMap">
-			<div id="itemMapCountdown" class="curToggle">
+			<div id="itemMapCountdown">
 				<div id="itemCountdown"></div>
 			</div>
 			<div id="itemMapCoordinates">
