Finish Resource update

--- a/mapsrc.html
+++ b/mapsrc.html
@@ -142,7 +142,7 @@
 <div>
 	<p>Rich and T6 nodes reset in about 22 hours after gathering; T1-T5 nodes reset in about 1 hour. You can use alts to re-gather any node. More <a href="http://wiki.guildwars2.com/wiki/Resource#Harvesting">plants</a> on the wiki.</p>
 	<p>Notice: The map nodes you clicked to hide will be disordered when the site updates the nodes database.</p>
-	<p><b>Credits:</b> GW2 Wiki (plant farms), jetti91 and Gragx (rich nodes), sarcasticbots (Toxic Spores), ScionKai (Poultry)</p>
+	<p><b>Credits:</b> GW2 Wiki (plant farms), jetti91 and Gragx (rich nodes), katubug and Moonlight1001 (hotspots), sarcasticbots (Toxic Spores), ScionKai (Poultry), koenvu (Truffles)</p>
 </div>
 <br />
 </section>
