Tile mode dynamic font

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<u><a class="jsTranslate linkExternal" title="<dfn>Go to Forum</dfn>" href="http://forum.renaka.com/forum/368355/">news</a></u><span> /</span>
 					<u><a class="jsTranslate" title="<dfn>Switch to Simple Mode (clock only)</dfn><br />gw2timer.com/s<br /><div class='mapLoc'><img src='http://i.imgur.com/ERlYRR3.png' /></div>" href="./?mode=Simple">simple</a></u><span> /</span>
 					<u><a class="jsTranslate" title="<dfn>Switch to Mobile Mode (right panel only)</dfn><br />gw2timer.com/m<br /><div class='mapLoc'><img src='http://i.imgur.com/0QsaeY7.png' /></div>" href="./?mode=Mobile">mobile</a></u><span> /</span>
-					<u><a class="jsTranslate" title="<dfn>Switch to Tile Mode (timers only)</dfn><br />gw2timer.com/t<br /><div class='mapLoc'><img src='http://i.imgur.com/fiDO6UC.png' /></div>" href="./?mode=Tile">tile</a></u>
+					<u><a class="jsTranslate" title="<dfn>Switch to Tile Mode (timers only)</dfn><br />gw2timer.com/t<br /><div class='mapLoc'><img src='http://i.imgur.com/SDseVJE.png' /></div>" href="./?mode=Tile">tile</a></u>
 				</div>
 				<!--<div id="mapSwitch" class="mapHUDContainer">
 					<img id="mapSwitchButton" class="mapHUDButton" data-title="click to wvw" src="img/map/wvw.png" alt="display" />
