Corrected embed src

--- a/bin/embed_gw2timer.html
+++ b/bin/embed_gw2timer.html
@@ -5,47 +5,47 @@
 </head>
 <body>
 
-	<h2>Example 0</h2>
-	<iframe src="http://localhost/GW2Timer/?mode=Tile" width="200" height="400" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe>
-	<br />
-	<br />
-
 	<h2>Example 1</h2>
-	<iframe src="http://gw2timer.com/?int_setClock=2&int_setDimming=2" width="360" height="85" seamless="seamless" scrolling="no" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe>
+	<iframe src="http://gw2timer.com/?mode=Tile&enu_Language=en" width="200" height="400" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe>
 	<br />
 	<br />
 
 	<h2>Example 2</h2>
-	<iframe src="http://gw2timer.com/?int_setClock=0&int_setDimming=1" width="360" height="220" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe>
+	<iframe src="http://gw2timer.com/?int_setClock=2&int_setDimming=2" width="360" height="85" seamless="seamless" scrolling="no" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe>
 	<br />
 	<br />
 
 	<h2>Example 3</h2>
-	<iframe src="http://gw2timer.com/?int_setClock=3&bol_expandWB=false" width="360" height="580" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe>
+	<iframe src="http://gw2timer.com/?int_setClock=0&int_setDimming=1" width="360" height="220" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe>
 	<br />
 	<br />
 
 	<h2>Example 4</h2>
+	<iframe src="http://gw2timer.com/?int_setClock=3&bol_expandWB=false" width="360" height="580" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe>
+	<br />
+	<br />
+
+	<h2>Example 5</h2>
 	<iframe src="http://gw2timer.com/?page=Timetable&enu_Language=fr&int_setClock=2&bol_use24Hour=true" width="360" height="580" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe>
 	<br />
 	<br />
 	
-	<h2>Example 5</h2>
+	<h2>Example 6</h2>
 	<iframe src="http://gw2timer.com/?page=Guild&enu_Language=de&int_setClock=3" width="1080" height="580" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe>
 	<br />
 	<br />
 
-	<h2>Example 6</h2>
+	<h2>Example 7</h2>
 	<iframe src="http://gw2timer.com/?page=Resource&enu_Language=es&bol_showPanel=false" width="720" height="580" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe>
 	<br />
 	<br />
 	
-	<h2>Example 7</h2>
+	<h2>Example 8</h2>
 	<iframe src="http://gw2timer.com/?mode=Simple" width="720" height="720" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe>
 	<br />
 	<br />
 
-	<h2>Example 8</h2>
+	<h2>Example 9</h2>
 	<iframe src="http://gw2timer.com/?mode=Mobile&int_setClock=3&bol_expandWB=false" width="400" height="580" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe>
 	<br />
 	<br />
