Tile timetable, moved chains options

--- a/helpsrc.html
+++ b/helpsrc.html
@@ -64,6 +64,7 @@
 2015 February 7 - GPS for overlay<br />
 2015 March 4 - Calendar, mobile mode<br />
 2015 June 22 - Guild missions<br />
+2015 August 4 - Tile mode<br />
 </p>
 
 <hr />
