--- a/index.html
+++ b/index.html
@@ -371,13 +371,13 @@
 			</div>
 			<div id="itemSocial">
 				<a class="linkExternal" title="<dfn>Learn GW2Timer's features :?</dfn>" href="http://forum.renaka.com/topic/5602037/">
-					<ins class="sixteen sixt_in"></ins>
+					<ins class="s16 s16_info"></ins>
 				</a>
 				<a class="linkExternal" title="<dfn>Like GW2Timer on Facebook :)</dfn>" href="http://www.facebook.com/gw2timer">
-					<ins class="sixteen sixt_fb"></ins>
+					<ins class="s16 s16_facebook"></ins>
 				</a>
 				<a class="linkExternal" title="<dfn>Follow GW2Timer on Twitter :)</dfn>" href="https://twitter.com/gw2timer">
-					<ins class="sixteen sixt_tt"></ins>
+					<ins class="s16 s16_twitter"></ins>
 				</a>
 			</div>
 		</section>
@@ -482,6 +482,7 @@
 					</div>
 					<h2>Map</h2>
 					<label title="Show/Hide the map area on the left."><input id="opt_bol_showMap" type="checkbox" /> Show the map</label>
+					<label title="Show/Hide GW2 event countdowns and gem sales info on the top right corner of the map pane. Requires restart."><input id="opt_bol_showDashboard" type="checkbox" /> Show the dashboard</label>
 					<span>For map options, hover over the <img class="cntIconExample" src="img/map/display.png" alt="Icon" /> button on the top right corner of the map pane.</span><br />
 					<br />
 					<h2>Alarm</h2>
@@ -503,11 +504,11 @@
 					<label title="Regularly get the current buy and sell prices. This option must be enabled for notification of desired price range to work."><input id="opt_bol_refreshPrices" type="checkbox" /> Auto-refresh data and enable notification</label>
 					<label title="Will use the backup provider if unchecked."><input id="opt_bol_useMainTPSearch" type="checkbox" /> Use main TP search provider</label>
 					<label title="How many seconds before the program refreshes price and exchange data?"><input id="opt_int_secTradingRefresh" type="number" min="10" max="600" step="1" /> Seconds between refreshes</label>
-					<label title="How many calculators to show? If you pick a number lower than the current, data from the higher numbered calculators will be erased! Reload page to see changes."><input id="opt_int_numTradingCalculators" type="number" min="1" max="250" step="1" /> Number of TP calculators</label>
+					<label title="How many calculators to show? If you pick a number lower than the current, data from the higher numbered calculators will be erased! Requires restart."><input id="opt_int_numTradingCalculators" type="number" min="1" max="250" step="1" /> Number of TP calculators</label>
 					<label title="How many items to show in the TP search result?"><input id="opt_int_numTradingResults" type="number" min="1" max="50" step="1" /> Number of TP search results</label>
 					<h2>Tools</h2>
-					<label title="Reload page to see changes."><input id="opt_int_sizeNotepadFont" type="number" min="8" max="32" step="1" /> Notepad font size</label>
-					<label title="Reload page to see changes."><input id="opt_int_sizeNotepadHeight" type="number" min="180" max="1080" step="1" /> Notepad height (pixels)</label>
+					<label title="Requires restart."><input id="opt_int_sizeNotepadFont" type="number" min="8" max="32" step="1" /> Notepad font size</label>
+					<label title="Requires restart."><input id="opt_int_sizeNotepadHeight" type="number" min="180" max="1080" step="1" /> Notepad height (pixels)</label>
 					<br />
 					<h2>Daily</h2>
 					<label title="If you missed some login rewards days, put the number of missed days here so the track rolls back from the official day."><input id="opt_int_shiftLogin" type="number" min="0" max="28" step="1" /> Login rewards track shift back (days)</label>
