--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
 		<section id="mapPane">&nbsp;
 			<article id="paneHUDMap">
 			<div id="itemDashboard">
-				<kbd id="dsbClose" class="curClick" title="Close this dashboard. Open the Chains page to see this again.<br />You can hide this permanently by going to Options page, Map section."></kbd><div id="dsbAnnouncement"></div><div id="dsbCountdown"></div><div id="dsbSale"></div>
+				<kbd id="dsbClose" class="curClick" title="Close this dashboard. Open the Chains page to see this again.<br />You can hide this permanently by going to Options page, Map section."></kbd>
+				<div id="dsbAnnouncement"></div>
+				<div id="dsbCountdown"></div>
+				<div id="dsbSale"></div>
 			</div>
 			<div id="itemMapCoordinates">
 				<input id="mapCoordinatesMouse" type="text" />
