Moved Living Story timers to Dashboard

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 				<div id="dsbAnnouncement"></div>
 				<div id="dsbCountdown"></div>
 				<div id="dsbSale"></div>
+				<div id="dsbStory"></div>
 			</div>
 			<div id="itemMapCoordinates">
 				<input id="mapCoordinatesMouse" type="text" />
