More Mandarin support

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<section id="mapPane">&nbsp;
 			<article id="paneHUDMap">
 			<div id="itemDashboard">
-				<kbd id="dsbClose" class="curClick" title="Close this dashboard. You can hide this permanently by going to Options page, Map section."></kbd>
+				<kbd id="dsbClose" class="curClick" title="Close the dashboard. You can hide this permanently by going to Options page, Map section."></kbd>
 				<div id="dsbAnnouncement"></div>
 				<div id="dsbCountdown"></div>
 				<div id="dsbSale"></div>
@@ -165,7 +165,7 @@
 							<h2 data-region="ascalon"></h2>
 							<ul>
 								<li data-zone="citadel"></li>
-								<li data-zone="ashford"></li>
+								<li data-zone="plains"></li>
 								<li data-zone="diessa"></li>
 								<li data-zone="fields"></li>
 								<li data-zone="marches"></li>
